--- a/shop.html
+++ b/shop.html
@@ -118,7 +118,7 @@
                             </div>
                         </div>
                         <div class="imgProdact">
-                            <img src="img/medicine-background-with-elements.png" alt="">
+                            <img src="img/background.png" alt="">
                         </div>
                         <div class="footerCard">
                             <div class="nameProdact">
@@ -147,7 +147,7 @@
                             </div>
                         </div>
                         <div class="imgProdact">
-                            <img src="img/medicine-background-with-elements.png" alt="">
+                            <img src="img/background.png" alt="">
                         </div>
                         <div class="footerCard">
                             <div class="nameProdact">
@@ -176,7 +176,7 @@
                             </div>
                         </div>
                         <div class="imgProdact">
-                            <img src="img/medicine-background-with-elements.png" alt="">
+                            <img src="img/background.png" alt="">
                         </div>
                         <div class="footerCard">
                             <div class="nameProdact">
@@ -205,7 +205,7 @@
                             </div>
                         </div>
                         <div class="imgProdact">
-                            <img src="img/medicine-background-with-elements.png" alt="">
+                            <img src="img/background.png" alt="">
                         </div>
                         <div class="footerCard">
                             <div class="nameProdact">
@@ -234,7 +234,7 @@
                             </div>
                         </div>
                         <div class="imgProdact">
-                            <img src="img/medicine-background-with-elements.png" alt="">
+                            <img src="img/background.png" alt="">
                         </div>
                         <div class="footerCard">
                             <div class="nameProdact">
@@ -307,5 +307,6 @@
     <script src="js/main.js"></script>
 
 </body>
+
 
 </html>
